--- a/game.html
+++ b/game.html
@@ -76,18 +76,18 @@
     <h3 class="title" style="margin-top: 3%">ANIMATIONS</h3>
     <div class="responsive-table">
       <div class="cell">
-        <video width="#" height="#" controls autoplay loop>
-          <source src="images/playercompress.mp4" type="video/mp4" />
+        <video width="319" height="240" controls autoplay muted loop>
+          <source src="images/ColorJumper.mp4" type="video/mp4" />
         </video>
       </div>
 
       <div class="cell">
-        <video width="319" height="240" controls autoplay loop>
+        <video width="319" height="240" controls autoplay muted loop>
           <source src="images/compressAnimation.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="cell">
-        <video width="319" height="240" controls autoplay loop>
+        <video width="319" height="240" controls autoplay muted loop>
           <source src="images/compressDeadAnimation.mp4" type="video/mp4" />
         </video>
       </div>
