--- a/digital.html
+++ b/digital.html
@@ -63,7 +63,7 @@
       <img src="images/Set boundaries.jpg" alt="Image 7" class="gallery-item" />
       <img src="images/info.jpg" alt="Image 8" class="gallery-item" />
       <img src="images/btsadv.jpg" alt="Image 5" class="gallery-item" />
-      <img src="images/summer.jpg" alt="Image 10" class="gallery-item" />
+      <!--  <img src="images/summer.jpg" alt="Image 10" class="gallery-item" />-->
 
       <img src="images/LAVANDA-01.jpg" alt="Image 9" class="gallery-item" />
       <img src="images/INFOGRA.jpg" alt="Image 12" class="gallery-item" />
