--- a/game.html
+++ b/game.html
@@ -55,23 +55,12 @@
       style="background-color: white; margin-bottom: 60vh"
     >
       <div class="containerGame" style="background-color: white:  !important;">
-        <img class="icon one" src="images/GAME1.jpg" />
+        <img class="icon one" src="images/GAME3.jpg" />
         <img class="icon two" src="images/GAME2.jpg" />
-        <img class="icon three" src="images/GAME3.jpg" />
+        <img class="icon three" src="images/GAME5.png" />
+        <img class="icon four" src="images/GAME1.jpg" />
       </div>
     </section>
-
-    <div class="responsive-table">
-      <div class="cell">
-        <img class="boceto" src="images/GAME5.png" />
-      </div>
-      <div class="cell">
-        <img class="boceto" src="images/GAME8.jpg" />
-      </div>
-      <div class="cell">
-        <img class="boceto" src="images/game9.jpg" />
-      </div>
-    </div>
 
     <h3 class="title" style="margin-top: 3%">ANIMATIONS</h3>
     <div class="responsive-table">
@@ -92,6 +81,18 @@
         </video>
       </div>
     </div>
+
+    <!-- <div class="responsive-table">
+      <div class="cell">
+        <img class="boceto" src="images/GAME5.png" />
+      </div>
+      <div class="cell">
+        <img class="boceto" src="images/GAME8.jpg" />
+      </div>
+      <div class="cell">
+        <img class="boceto" src="images/game9.jpg" />
+      </div>
+    </div>-->
 
     <h3 class="title" style="margin-top: 3%">SKETCH</h3>
     <div class="responsive-table">
