--- a/digital.html
+++ b/digital.html
@@ -11,12 +11,14 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <ul class="">
           <li><a href="index.html"> Home</a></li>
+
           <li><a href="digital.html"> Design</a></li>
           <li><a href="web.html"> Web</a></li>
           <li><a href="game.html"> Gaming</a></li>
-          <li><a href="extra.html"> Contact</a></li>
+          <!--   <li><a href="extra.html">  Contact</a></li>-->
+          <li><a href="email.html"> Email</a></li>
         </ul>
       </nav>
     </header>
@@ -78,7 +80,27 @@
     </div>
 
     <footer>
-      <p>My Portfolio / Last update May 2025</p>
+      <div class="container3titles">
+        <div class="box3titles">
+          <a class="">Phone:<strong> 343 585 5290</strong> </a>
+        </div>
+        <div class="box3titles">
+          <a class="">Email:<strong> dg.joana24@gmail.com</strong> </a>
+        </div>
+        <div class="box3titles">
+          <a class="">Address:<strong>Montréal QC</strong> </a>
+        </div>
+      </div>
+      <hr
+        style="
+          border: none;
+          height: 1px;
+          opacity: 30%;
+          background-color: white;
+          margin: 8px 0;
+        "
+      />
+      <a class="dateUpdate"><i>Last update June 2025</i></a>
     </footer>
 
     <script src="script.js"></script>
