--- a/web.html
+++ b/web.html
@@ -75,8 +75,8 @@
               target="_blank"
               >ACOMM</a
             >. <br />
-            (Project created with FIGMA)
           </p>
+          <p class="note">* Project created with FIGMA</p>
           <div class="images">
             <img src="images/1.jpg" alt="Image 3A" />
             <img src="images/2.jpg" alt="Image 3B" />
