--- a/extra.html
+++ b/extra.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li><a href="index.html"> Home</a></li>
-          <li><a href="digital.html"> Design</a></li>
+          <li><a href="digital.html"> Graphics</a></li>
           <li><a href="web.html"> Web</a></li>
           <li><a href="game.html"> Gaming</a></li>
           <li><a href="extra.html"> Contact</a></li>
