--- a/Graphics.html
+++ b/Graphics.html
@@ -13,12 +13,11 @@
       <nav>
         <ul class="">
           <li><a href="index.html"> Home</a></li>
-
-          <li><a href="digital.html"> Graphics</a></li>
-          <li><a href="web.html"> Web</a></li>
-          <li><a href="game.html"> Gaming</a></li>
-          <!--   <li><a href="extra.html">  Contact</a></li>-->
-          <li><a href="email.html"> Email</a></li>
+          <li><a href="Graphics.html"> Graphics</a></li>
+          <li><a href="Web.html"> Web</a></li>
+          <li><a href="Gaming.html"> Gaming</a></li>
+          <!--   <li><a href="Contact.html">  Contact</a></li>-->
+          <li><a href="Email.html"> Email</a></li>
         </ul>
       </nav>
     </header>
@@ -100,7 +99,7 @@
           margin: 8px 0;
         "
       />
-      <a class="dateUpdate"><i>Last update June 2025</i></a>
+      <a class="dateUpdate"><i>Last update July 2025</i></a>
     </footer>
 
     <script src="script.js"></script>
