--- a/email.html
+++ b/email.html
@@ -12,13 +12,12 @@
     <header>
       <nav>
         <ul class="">
-          <li><a href="index.html"> Home</a></li>
-
-          <li><a href="digital.html"> Graphics</a></li>
-          <li><a href="web.html"> Web</a></li>
-          <li><a href="game.html"> Gaming</a></li>
-          <!--   <li><a href="extra.html">  Contact</a></li>-->
-          <li><a href="email.html"> Email</a></li>
+          <li><a href="index.html">  Home</a></li>       
+          <li><a href="Graphics.html">  Graphics</a></li>
+          <li><a href="Web.html">  Web</a></li>
+          <li><a href="Gaming.html">  Gaming</a></li>
+       <!--   <li><a href="Contact.html">  Contact</a></li>-->
+          <li><a href="Email.html">  Email</a></li>
         </ul>
       </nav>
     </header>
@@ -46,11 +45,10 @@
             <p>
               With experience designing newsletters and branded digital content, 
               I bring a strong foundation in layout, visual communication, 
-              and user-centered design. <br> <br> While my background has focused on 
-              editorial and brand design, I’m now expanding into email marketing; 
-              applying the same design rigor to conversion-focused campaigns. 
-             The following examples show the kind of marketing visuals 
-              I can create: structured, brand-aligned, and built to engage.
+              and user-centered design. <br> <br>
+              I am currently taking a course in <strong>email marketing</strong>, where I'm applying these skills 
+              to create effective, conversion-focused campaigns. The pieces shown here, are examples that
+              reflect the kind of structured, brand-aligned visuals I can create to engage audiences.<br> <br> 
     
               <br />
             </p>
@@ -112,7 +110,7 @@
           margin: 8px 0;
         "
       />
-      <a class="dateUpdate"><i>Last update June 2025</i></a>
+      <a class="dateUpdate"><i>Last update July 2025</i></a>
     </footer>
 
     <script src="script.js"></script>
