--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <header>
       <nav>
         <ul class="">
-          <li><a href="index.html">  Home</a></li>
-       
-          <li><a href="digital.html">  Graphics</a></li>
-          <li><a href="web.html">  Web</a></li>
-          <li><a href="game.html">  Gaming</a></li>
-       <!--   <li><a href="extra.html">  Contact</a></li>-->
-          <li><a href="email.html">  Email</a></li>
+          <li><a href="index.html">  Home</a></li>       
+          <li><a href="Graphics.html">  Graphics</a></li>
+          <li><a href="Web.html">  Web</a></li>
+          <li><a href="Gaming.html">  Gaming</a></li>
+       <!--   <li><a href="Contact.html">  Contact</a></li>-->
+          <li><a href="Email.html">  Email</a></li>
         </ul>
       </nav>
     </header>
@@ -137,7 +136,7 @@
         </div>
       </div>
       <hr style="border: none; height: 1px; opacity: 30%; background-color: white; margin: 8px 0;">
-      <a class="dateUpdate"><i>Last update June 2025</i></a>
+      <a class="dateUpdate"><i>Last update July 2025</i></a>
     </footer>
     
 
