correct title names

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <link rel="icon" type="image/png" href="images/icon.png" />
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" contsent="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    
 
-    <title>Graphic Designer Portfolio</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
