--- a/Email.html
+++ b/Email.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/png" href="images/icon.png" />
+    <link rel="icon" type="imagse/png" href="images/icon.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Extra</title>
+    <title>Email Design</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
