--- a/Graphics.html
+++ b/Graphics.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="icon" type="image/png" href="images/icon.png" />
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-sCompatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Content</title>
     <link rel="stylesheet" href="styles.css" />
