--- a/Email.html
+++ b/Email.html
@@ -46,7 +46,7 @@
               With experience designing newsletters and branded digital content, 
               I bring a strong foundation in layout, visual communication, 
               and user-centered design. <br> <br>
-              I am currently taking a course in <strong>email marketing</strong>, where I'm applying these skills 
+              I am currently taking a course in <strong>email marketing (Klaviyo)</strong>, where I'm applying these skills 
               to create effective, conversion-focused campaigns. The pieces shown here, are examples that
               reflect the kind of structured, brand-aligned visuals I can create to engage audiences.<br> <br> 
     
