--- a/Graphics.html
+++ b/Graphics.html
@@ -49,29 +49,8 @@
       <img src="images/sv4.png" alt="Image 2" class="gallery-item" />
 
       <img src="images/french.gif" alt="Image 1" class="gallery-item" />
-      <video
-        class="gallery-item"
-        width=""
-        height=""
-        controls
-        autoplay
-        muted
-        loop
-      >
-        <source src="images/restaurant.mp4" type="video/mp4" />
-      </video>
-
-      <video
-        class="gallery-item"
-        width=""
-        height=""
-        controls
-        autoplay
-        muted
-        loop
-      >
-        <source src="images/restaurant2.mp4" type="video/mp4" />
-      </video>
+      <img src="images/kids.gif" alt="Image 2" class="gallery-item" />
+      <img src="images/bar1.gif" alt="Image 1" class="gallery-item" />
 
       <img src="images/TURTLESsquare.png" alt="Image 2" class="gallery-item" />
 
@@ -80,18 +59,18 @@
 
       <img src="images/info.jpg" alt="Image 8" class="gallery-item" />
       <img src="images/Set boundaries.jpg" alt="Image 7" class="gallery-item" />
-      <img src="images/kids.gif" alt="Image 2" class="gallery-item" />
+      <img src="images/bar2.gif" alt="Image 1" class="gallery-item" />
 
       <img src="images/publicacion1.jpg" alt="Image 6" class="gallery-item" />
       <img src="images/btsadv.jpg" alt="Image 5" class="gallery-item" />
-      <img src="images/lona.jpg" alt="Image 11" class="gallery-item" />
+      <img src="images/LAVANDA-01.jpg" alt="Image 11" class="gallery-item" />
 
       <img src="images/d1.jpg" alt="Image 2" class="gallery-item" />
       <img src="images/d2.jpg" alt="Image 3" class="gallery-item" />
 
       <!--  <img src="images/summer.jpg" alt="Image 10" class="gallery-item" />-->
 
-      <img src="images/LAVANDA-01.jpg" alt="Image 9" class="gallery-item" />
+      <img src="images/lona.jpg" alt="Image 9" class="gallery-item" />
       <img src="images/bebe.png" alt="Image 2" class="gallery-item" />
       <img src="images/INFOGRA.jpg" alt="Image 12" class="gallery-item" />
     </div>
