--- a/Graphics.html
+++ b/Graphics.html
@@ -50,7 +50,7 @@
 
       <img src="images/french.gif" alt="Image 1" class="gallery-item" />
       <img src="images/kids.gif" alt="Image 2" class="gallery-item" />
-      <img src="images/bar1.gif" alt="Image 1" class="gallery-item" />
+      <img src="images/bar.gif" alt="Image 1" class="gallery-item" />
 
       <img src="images/TURTLESsquare.png" alt="Image 2" class="gallery-item" />
 
