--- a/Email.html
+++ b/Email.html
@@ -61,17 +61,17 @@
         <div class="containerEmail">
           <div class="box3titles">
             <div class="scroll-box">
+              <img src="images/email_House.jpg" alt="Long Image" />
+            </div>
+          </div>
+          <div class="box3titles">
+            <div class="scroll-box">
               <img src="images/sample.png" alt="Long Image" />
             </div>
           </div>
           <div class="box3titles">
             <div class="scroll-box">
               <img src="images/svetiaEmail.jpg" alt="Long Image" />
-            </div>
-          </div>
-          <div class="box3titles">
-            <div class="scroll-box">
-              <img src="images/soon.svg" alt="Long Image" />
             </div>
             
         </div>
