--- a/Email.html
+++ b/Email.html
@@ -66,12 +66,12 @@
           </div>
           <div class="box3titles">
             <div class="scroll-box">
-              <img src="images/sample.png" alt="Long Image" />
+              <img src="images/emailMetco.jpg" alt="Long Image" />
             </div>
           </div>
           <div class="box3titles">
             <div class="scroll-box">
-              <img src="images/svetiaEmail.jpg" alt="Long Image" />
+              <img src="images/sample.png" alt="Long Image" />
             </div>
             
         </div>
