--- a/Graphics.html
+++ b/Graphics.html
@@ -49,7 +49,7 @@
       <img src="images/sv4.png" alt="Image 2" class="gallery-item" />
 
       <img src="images/french.gif" alt="Image 1" class="gallery-item" />
-      <img src="images/kids.gif" alt="Image 2" class="gallery-item" />
+      <img src="images/karemi.gif" alt="Image 2" class="gallery-item" />
       <img src="images/bar.gif" alt="Image 1" class="gallery-item" />
 
       <img src="images/TURTLESsquare.png" alt="Image 2" class="gallery-item" />
@@ -65,14 +65,16 @@
       <img src="images/btsadv.jpg" alt="Image 5" class="gallery-item" />
       <img src="images/LAVANDA-01.jpg" alt="Image 11" class="gallery-item" />
 
-      <img src="images/d1.jpg" alt="Image 2" class="gallery-item" />
+      <img src="images/CMA HOSPITAL.jpg" alt="Image 2" class="gallery-item" />
       <img src="images/d2.jpg" alt="Image 3" class="gallery-item" />
 
       <!--  <img src="images/summer.jpg" alt="Image 10" class="gallery-item" />-->
 
-      <img src="images/lona.jpg" alt="Image 9" class="gallery-item" />
-      <img src="images/bebe.png" alt="Image 2" class="gallery-item" />
-      <img src="images/INFOGRA.jpg" alt="Image 12" class="gallery-item" />
+      <img src="images/d1.jpg" alt="Image 9" class="gallery-item" />
+      <img src="images/lona.jpg" alt="Image 2" class="gallery-item" />
+      <img src="images/kids.gif" alt="Image 12" class="gallery-item" />
+
+      <img src="images/INFOGRA.jpg" alt="Image 1" class="gallery-item" />
     </div>
 
     <!-- Lightbox -->
