--- a/Email.html
+++ b/Email.html
@@ -89,8 +89,8 @@
     <br />
     <br />
 
-    <footer>
-      <div class="container3titles">
+    <footer >
+      <div class="container3titles" >
         <div class="box3titles">
           <a class="">Phone:<strong> 343 585 5290</strong> </a>
         </div>
@@ -98,19 +98,11 @@
           <a class="">Email:<strong> dg.joana24@gmail.com</strong> </a>
         </div>
         <div class="box3titles">
-          <a class="">Address:<strong>Montréal QC</strong> </a>
+          <a class="">Address:<strong> Montreal QC</strong> </a>
         </div>
       </div>
-      <hr
-        style="
-          border: none;
-          height: 1px;
-          opacity: 30%;
-          background-color: white;
-          margin: 8px 0;
-        "
-      />
-      <a class="dateUpdate"><i>Last update July 2025</i></a>
+      <hr style="border: none; height: 1px; opacity: 30%; background-color: white; margin: 8px 0;">
+      <a class="dateUpdate"><i>Last update August 2025</i></a>
     </footer>
 
     <script src="script.js"></script>
