--- a/Graphics.html
+++ b/Graphics.html
@@ -92,7 +92,7 @@
           <a class="">Email:<strong> dg.joana24@gmail.com</strong> </a>
         </div>
         <div class="box3titles">
-          <a class="">Address:<strong>Montréal QC</strong> </a>
+          <a class="">Address:<strong> Montreal QC</strong> </a>
         </div>
       </div>
       <hr
@@ -104,7 +104,7 @@
           margin: 8px 0;
         "
       />
-      <a class="dateUpdate"><i>Last update July 2025</i></a>
+      <a class="dateUpdate"><i>Last update August 2025</i></a>
     </footer>
 
     <script src="script.js"></script>
