--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
              <img src="images/sc.png" class="responsive-image" />
         </div>
 
-        <div class="container3titles">
+        <div class="container3titles" style="margin-bottom: 7vh;">
           <div class="box3titles">
             <a class="contactTxt"><strong></strong> </a>
           </div>
@@ -132,11 +132,11 @@
           <a class="">Email:<strong> dg.joana24@gmail.com</strong> </a>
         </div>
         <div class="box3titles">
-          <a class="">Address:<strong>Montréal QC</strong> </a>
+          <a class="">Address:<strong> Montreal QC</strong> </a>
         </div>
       </div>
       <hr style="border: none; height: 1px; opacity: 30%; background-color: white; margin: 8px 0;">
-      <a class="dateUpdate"><i>Last update July 2025</i></a>
+      <a class="dateUpdate"><i>Last update August 2025</i></a>
     </footer>
     
 
