--- a/Web.html
+++ b/Web.html
@@ -50,8 +50,8 @@
             <p>
               Developed a series of six branded minisites, each tailored to
               showcase a distinct product: Azúcar BC, Sweet-O, Svetia,
-              Piloncillo Genuino, Mascabado BC, and Endulzante Genuino. Each
-              site was uniquely designed to reflect the identity, tone, and
+              Piloncillo Genuino, Mascabado BC, and Endulzante Genuino.<br /><br />
+              Each site was uniquely designed to reflect the identity, tone, and
               target audience of its respective product, ensuring a cohesive yet
               customized digital experience across the full lineup.
             </p>
@@ -66,11 +66,13 @@
             <h2 class="titleWebP">Design for ACOMM</h2>
           </div>
           <p class="textWebP">
-            Currently working on the first section for the renovation of a
-            section in the website-
+            Designed a prototype in Figma for a future update of the ACOMM
+            website’s booking section, aligning with the organization’s values
+            while enhancing user navigation and making the interface more
+            intuitive and easier to manage
             <a
               class="colorLinks"
-              href="https://www.figma.com/file/OppwNoqOIyFItBMcni8NOh/ACOMM?type=design&node-id=0%3A1&mode=design&t=w1FO1P6MFJVwm86A-1"
+              href="https://www.figma.com/design/IhLO4wDPE8YR5EgsmylQCc/ACOMM?t=oEFxQp3kJv4xGilH-1"
               target="_blank"
               >ACOMM</a
             >. <br />
@@ -86,10 +88,10 @@
               Redesigned the reservation flow to make the user experience more
               intuitive and streamlined. Simplified the overall site structure
               by reducing the number of sections and pages, resulting in faster
-              navigation and clearer user pathways. Additionally, integrated key
-              features such as reservation cancellation, modification options,
-              and membership purchasing to enhance functionality and user
-              control.
+              navigation and clearer user pathways. <br />
+              <br />Additionally, integrated key features such as reservation
+              cancellation, modification options, and membership purchasing to
+              enhance functionality and user control.
             </p>
           </div>
         </div>
