--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <a class="contactTxt"><strong></strong> </a>
           </div>
           <div class="box3titles">
-            <a href="ResumeJoana_2025.pdf" class="btnDown1">▼ Download Resume</a>
+            <a href="ResumeJoana.pdf" class="btnDown1">▼ Download Resume</a>
           </div>
           <div class="box3titles">
             <a class="contactTxt"><strong></strong> </a>
