--- a/Contact.html
+++ b/Contact.html
@@ -51,7 +51,7 @@
             >
           </div>
           <div class="box3titles">
-            <a class="contactTxt">Address:<strong>Montréal QC</strong> </a>
+            <a class="contactTxt">Address:<strong>Mexico</strong> </a>
           </div>
         </div>
 
