--- a/Gaming.html
+++ b/Gaming.html
@@ -16,9 +16,8 @@
           <li><a href="index.html"> Home</a></li>
           <li><a href="Graphics.html"> Graphics</a></li>
           <li><a href="Web.html"> Web</a></li>
-          <li><a href="Gaming.html"> Gaming</a></li>
-          <!--   <li><a href="Contact.html">  Contact</a></li>-->
           <li><a href="Email.html"> Email</a></li>
+          <li><a href="Gaming.html"> Gaming</a></li>
         </ul>
       </nav>
     </header>
@@ -117,7 +116,7 @@
           <a class="">Email:<strong> dg.joana24@gmail.com</strong> </a>
         </div>
         <div class="box3titles">
-          <a class="">Address:<strong> Montreal QC</strong> </a>
+          <a class="">Address:<strong> Mexico</strong> </a>
         </div>
       </div>
       <hr
@@ -129,7 +128,7 @@
           margin: 8px 0;
         "
       />
-      <a class="dateUpdate"><i>Last update August 2025</i></a>
+      <a class="dateUpdate"><i>Last update October 2025</i></a>
     </footer>
 
     <script src="script.js"></script>
