--- a/Graphics.html
+++ b/Graphics.html
@@ -15,9 +15,8 @@
           <li><a href="index.html"> Home</a></li>
           <li><a href="Graphics.html"> Graphics</a></li>
           <li><a href="Web.html"> Web</a></li>
-          <li><a href="Gaming.html"> Gaming</a></li>
-          <!--   <li><a href="Contact.html">  Contact</a></li>-->
           <li><a href="Email.html"> Email</a></li>
+          <li><a href="Gaming.html"> Gaming</a></li>
         </ul>
       </nav>
     </header>
@@ -74,7 +73,7 @@
       <img src="images/lona.jpg" alt="Image 2" class="gallery-item" />
       <img src="images/kids.gif" alt="Image 12" class="gallery-item" />
 
-      <img src="images/INFOGRA.jpg" alt="Image 1" class="gallery-item" />
+      <!-- <img src="images/INFOGRA.jpg" alt="Image 1" class="gallery-item" />-->
     </div>
 
     <!-- Lightbox -->
@@ -92,7 +91,7 @@
           <a class="">Email:<strong> dg.joana24@gmail.com</strong> </a>
         </div>
         <div class="box3titles">
-          <a class="">Address:<strong> Montreal QC</strong> </a>
+          <a class="">Address:<strong> Mexico</strong> </a>
         </div>
       </div>
       <hr
@@ -104,7 +103,7 @@
           margin: 8px 0;
         "
       />
-      <a class="dateUpdate"><i>Last update August 2025</i></a>
+      <a class="dateUpdate"><i>Last update October 2025</i></a>
     </footer>
 
     <script src="script.js"></script>
