--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
           <li><a href="index.html">  Home</a></li>       
           <li><a href="Graphics.html">  Graphics</a></li>
           <li><a href="Web.html">  Web</a></li>
+          <li><a href="Email.html">  Email</a></li>
           <li><a href="Gaming.html">  Gaming</a></li>
        <!--   <li><a href="Contact.html">  Contact</a></li>-->
-          <li><a href="Email.html">  Email</a></li>
+      
         </ul>
       </nav>
     </header>
@@ -103,7 +104,10 @@
             <a class="contactTxt"><strong></strong> </a>
           </div>
           <div class="box3titles">
-            <a href="ResumeJoana.pdf" class="btnDown1">▼ Download Resume</a>
+            <a href="Resume_Joana_English.pdf" class="btnDown1">▼ Resume (English)</a>
+          </div>
+          <div class="box3titles">
+            <a href="CV_Joana_Espanol.pdf" class="btnDown1">▼ Currículum (Español)</a>
           </div>
           <div class="box3titles">
             <a class="contactTxt"><strong></strong> </a>
@@ -132,11 +136,11 @@
           <a class="">Email:<strong> dg.joana24@gmail.com</strong> </a>
         </div>
         <div class="box3titles">
-          <a class="">Address:<strong> Montreal QC</strong> </a>
+          <a class="">Address:<strong> Mexico</strong> </a>
         </div>
       </div>
       <hr style="border: none; height: 1px; opacity: 30%; background-color: white; margin: 8px 0;">
-      <a class="dateUpdate"><i>Last update August 2025</i></a>
+      <a class="dateUpdate"><i>Last update October 2025</i></a>
     </footer>
     
 
